<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微行</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="session_title_left">消息</string>
    <string name="image">头像</string>
    <string name="userword">请输入邮箱</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="line">立即注册</string>
    <string name="third">使用第三方用户登录</string>
    <string name="title_activity_person_info">PersonInfoActivity</string>
    <string name="title_activity_choose_school">ChooseSchoolActivity</string>
    <string name="cancel">取消</string>
    <string name="pwSubmit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hours">时</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_myattention">MyattentionActivity</string>
    <string name="title_activity_search_friends">SearchFriendsActivity</string>
    <string name="title_activity_friends_info">FriendsInfoActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_more_info">MoreInfoActivity</string>
    <string name="title_activity_input_info">InputInfoActivity</string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="title_activity_validation_message">ValidationMessageActivity</string>
    <string name="title_activity_friend_request">FriendRequestActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_accept_friend_request">AcceptFriendRequestActivity</string>
    <string name="title_activity_attetnion_user_info">AttetnionUserInfoActivity</string>
    <string name="title_activity_about_school">AboutSchool</string>
    <string name="nothing">nothing</string>
    <string name="btn_AS_detail">详情</string>
    <string name="username">用户名</string>
    <string name="title_activity_selict_dot">SelictDot</string>
    <string name="title_activity_select_dot">SelectDot</string>
    <string name="title_activity_details">Details</string>
    <string name="title">标题</string>
    <string name="time">时间</string>
    <string name="details">详情</string>
    <string name="title_activity_edit_public">EditPublic</string>
    <string name="title_activity_jbex">JbexActivity</string>
    <string name="title_activity_dt_index">DT_index</string>
    <string name="title_activity_dt_details">DT_details</string>
    <string name="title_activity_dt_seletedot">DT_seletedot</string>
    <string name="title_activity_dt_edit">DT_edit</string>
    <string name="title_activity_jbex_select_dot">JbexSelectDot</string>
    <string name="title_activity_jbex_edit">JbexEditActivity</string>
    <string name="title_activity_jbex_details">JbexDetailsActivity</string>
    <string name="title_activity_my_publish">MyPublishActivity</string>
    <string name="title_activity_my_publish_jbex">MyPublishJbexActivity</string>
    <string name="title_activity_my_publish_jbex_request">MyPublishJbexRequestActivity</string>
    <string name="title_activity_mine_setting">MineSettingActivity</string>
    <string name="title_activity_my_publish_dynamci_acvtivity">MyPublishDynamciAcvtivity</string>
    <string name="title_activity_my_publish_public">MyPublishPublicActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_school_info">SchoolInfoActivity</string>
    <string name="title_activity_foot_rout">FootRoutActivity</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_poi_search">PoiSearchActivity</string>

</resources>
