<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp" >

        <ImageView
            android:id="@+id/detal_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/nothing" />

        <TextView
            android:id="@+id/details_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/detal_image"
            android:text="@string/username"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="15dp"
        android:background="#dcdcdc"
        android:contentDescription="@string/nothing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/details_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/nothing"
            android:text="@string/title"/>

        <ImageView
            
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:background="#dcdcdc"
            android:contentDescription="@string/nothing" />

        <TextView
            android:id="@+id/details_time"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/nothing"
            android:text="@string/time" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:background="#dcdcdc"
            android:contentDescription="@string/nothing" />

        <TextView
            android:id="@+id/details_details"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/nothing"
            android:text="@string/details"/>
    </LinearLayout>

</LinearLayout>