<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp" >

        <ImageView
            android:id="@+id/icn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="5dp"
            
            android:contentDescription="@string/nothing"
            android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/public_username"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginLeft="55dp"
                android:layout_centerVertical="true"
                android:text="@string/username" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:background="#dcdcdc"
        android:contentDescription="@string/nothing" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/snippet1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="false"
            android:textColor="#FF0000"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:background="#dcdcdc"
        android:contentDescription="@string/nothing" />

    <RelativeLayout
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp" >

        <Button
            android:id="@+id/btn_AS1_detail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            android:text="@string/btn_AS_detail"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>